crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v122.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 122
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 5
          - secs: 0
            nanos: 23000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 9
          - secs: 0
            nanos: 43000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 43000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 31000000
      stake_weighted_median:
        secs: 0
        nanos: 31000000
  - - Upgrade
    - observations:
        - - 7
          - secs: 0
            nanos: 926000000
        - - 10
          - secs: 0
            nanos: 898000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 7
          - secs: 0
            nanos: 317000000
      stake_weighted_median:
        secs: 0
        nanos: 926000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 367000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 10
          - secs: 0
            nanos: 338000000
        - - 8
          - secs: 0
            nanos: 330000000
        - - 5
          - secs: 0
            nanos: 292000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 338000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 606000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 320000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 186000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 244000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 129000000
  - - make_move_vec_0_elements
    - secs: 0
      nanos: 25000000
  - - mixed_commands
    - secs: 0
      nanos: 216000000
  - - upgrade_package
    - secs: 0
      nanos: 926000000
