crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v124.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 124
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 15000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 9
          - secs: 0
            nanos: 17000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 9
          - secs: 0
            nanos: 56000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 56000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 31000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 9
          - secs: 0
            nanos: 63000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - TransferObjects
    - observations:
        - - 3
          - secs: 0
            nanos: 68000000
        - - 1
          - secs: 0
            nanos: 90000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 90000000
  - - Upgrade
    - observations:
        - - 1
          - secs: 0
            nanos: 527000000
        - - 1
          - secs: 0
            nanos: 813000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 6
          - secs: 0
            nanos: 823000000
      stake_weighted_median:
        secs: 0
        nanos: 823000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 10
          - secs: 0
            nanos: 244000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 400000000
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 9
          - secs: 0
            nanos: 273000000
      stake_weighted_median:
        secs: 0
        nanos: 273000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 541000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 438000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 450000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 108000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 168000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 57000000
  - - mixed_commands
    - secs: 0
      nanos: 379000000
  - - upgrade_package
    - secs: 0
      nanos: 823000000
