crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v125.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 125
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 7
          - secs: 0
            nanos: 21000000
        - - 10
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 21000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 10
          - secs: 0
            nanos: 19000000
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 97000000
        - - 6
          - secs: 0
            nanos: 38000000
      stake_weighted_median:
        secs: 0
        nanos: 97000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 637000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 10
          - secs: 0
            nanos: 710000000
      stake_weighted_median:
        secs: 0
        nanos: 710000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 6
          - secs: 0
            nanos: 221000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 6
          - secs: 0
            nanos: 0
        - - 9
          - secs: 0
            nanos: 153000000
        - - 5
          - secs: 0
            nanos: 460000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 460000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 728000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 422000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 194000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 122000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 64000000
  - - make_move_vec_1_elements
    - secs: 0
      nanos: 42000000
  - - mixed_commands
    - secs: 0
      nanos: 414000000
  - - upgrade_package
    - secs: 0
      nanos: 710000000
