crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v131.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 131
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 2
          - secs: 0
            nanos: 19000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 8
          - secs: 0
            nanos: 9000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 7
          - secs: 0
            nanos: 30000000
        - - 8
          - secs: 0
            nanos: 33000000
        - - 7
          - secs: 0
            nanos: 16000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 30000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 68000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 57000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 57000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 570000000
        - - 9
          - secs: 0
            nanos: 222000000
        - - 6
          - secs: 0
            nanos: 572000000
      stake_weighted_median:
        secs: 0
        nanos: 570000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 6
          - secs: 0
            nanos: 464000000
        - - 10
          - secs: 0
            nanos: 315000000
        - - 10
          - secs: 0
            nanos: 373000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 464000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 732000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 334000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 285000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 183000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 120000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 95000000
  - - mixed_commands
    - secs: 0
      nanos: 294000000
  - - upgrade_package
    - secs: 0
      nanos: 570000000
